--- a/Shooting2D/Shooting2D.vcxproj
+++ b/Shooting2D/Shooting2D.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="Common.h" />
     <ClInclude Include="enums.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Shooting2D.h" />
@@ -138,6 +139,7 @@
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="Background.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Shooting2D.cpp" />
     <ClCompile Include="TestGridActor.cpp" />
