--- a/Shooting2D/Shooting2D.vcxproj.filters
+++ b/Shooting2D/Shooting2D.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="Singletons">
       <UniqueIdentifier>{48400345-4334-4b61-b77b-c7ab7b11f556}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ActorType\Test">
+      <UniqueIdentifier>{a9e125f4-79d5-400f-958a-81d376dfcea5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Component">
+      <UniqueIdentifier>{42c62c7e-6fd3-4d14-8bc2-7cd74384aba5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -45,12 +51,6 @@
     <ClInclude Include="Player.h">
       <Filter>ActorType</Filter>
     </ClInclude>
-    <ClInclude Include="TestGridActor.h">
-      <Filter>ActorType</Filter>
-    </ClInclude>
-    <ClInclude Include="TestHouseActor.h">
-      <Filter>ActorType</Filter>
-    </ClInclude>
     <ClInclude Include="Background.h">
       <Filter>ActorType</Filter>
     </ClInclude>
@@ -66,6 +66,21 @@
     <ClInclude Include="Factory.h">
       <Filter>Singletons</Filter>
     </ClInclude>
+    <ClInclude Include="TestHouseActor.h">
+      <Filter>ActorType\Test</Filter>
+    </ClInclude>
+    <ClInclude Include="TestCollisionActor.h">
+      <Filter>ActorType\Test</Filter>
+    </ClInclude>
+    <ClInclude Include="TestGridActor.h">
+      <Filter>ActorType\Test</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsComponent.h">
+      <Filter>Component</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Shooting2D.cpp">
@@ -77,12 +92,6 @@
     <ClCompile Include="Player.cpp">
       <Filter>ActorType</Filter>
     </ClCompile>
-    <ClCompile Include="TestGridActor.cpp">
-      <Filter>ActorType</Filter>
-    </ClCompile>
-    <ClCompile Include="TestHouseActor.cpp">
-      <Filter>ActorType</Filter>
-    </ClCompile>
     <ClCompile Include="Background.cpp">
       <Filter>ActorType</Filter>
     </ClCompile>
@@ -91,6 +100,18 @@
     </ClCompile>
     <ClCompile Include="ResourceManager.cpp">
       <Filter>Singletons</Filter>
+    </ClCompile>
+    <ClCompile Include="TestCollisionActor.cpp">
+      <Filter>ActorType\Test</Filter>
+    </ClCompile>
+    <ClCompile Include="TestGridActor.cpp">
+      <Filter>ActorType\Test</Filter>
+    </ClCompile>
+    <ClCompile Include="TestHouseActor.cpp">
+      <Filter>ActorType\Test</Filter>
+    </ClCompile>
+    <ClCompile Include="PhysicsComponent.cpp">
+      <Filter>Component</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
